# MPI_TESTS

ProcToThreads/: .gitignore  CMakeLists.txt  cpu_helper.cpp  main.cpp  run.sh
RMA/: CMakeLists.txt  main.cpp
Threads/: .gitignore  CMakeLists.txt  main.cpp
VerySimple/: CMakeLists.txt  main.cpp  run.sh
